--- a/share/qtvcp/screens/qtdragon/brushed_metal_color.qss
+++ b/share/qtvcp/screens/qtdragon/brushed_metal_color.qss
@@ -158,7 +158,7 @@ QLabel#label_axis_z {
 #axis_select_x {
     border: 2px solid black;
     border-radius: 4px;
-    font: 20pt "Lato Heavy";
+    font: 16pt "Lato Heavy";
     color: rgb(80, 255, 80);
    background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
@@ -166,7 +166,7 @@ QLabel#label_axis_z {
 #axis_select_y {
     border: 2px solid black;
     border-radius: 4px;
-    font: 20pt "Lato Heavy";
+    font: 16pt "Lato Heavy";
     color: rgb(255, 80, 80);
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
@@ -174,7 +174,7 @@ QLabel#label_axis_z {
 #axis_select_z {
     border: 2px solid black;
     border-radius: 4px;
-    font: 20pt "Lato Heavy";
+    font: 16pt "Lato Heavy";
     color:  rgb(80, 80, 255);
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
@@ -182,7 +182,7 @@ QLabel#label_axis_z {
 #axis_select_4 {
     border: 2px solid black;
     border-radius: 4px;
-    font: 20pt "Lato Heavy";
+    font: 16pt "Lato Heavy";
     color: rgb(233, 155, 37);
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
@@ -190,7 +190,7 @@ QLabel#label_axis_z {
 #axis_select_5 {
     border: 2px solid black;
     border-radius: 4px;
-    font: 20pt "Lato Heavy";
+    font: 16pt "Lato Heavy";
     color: rgb(223, 167, 198);
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
@@ -373,32 +373,24 @@ QSlider::groove:vertical {
 }
 
 QSlider::sub-page:horizontal {
-    background: qlineargradient(x1: 0, y1: 0.8, x2: 1, y2: 1,
-    stop: 0 #bbf stop: 1 #55f);
-    border: 1px solid #777;
-    border-radius: 3px;
+    background: qlineargradient(x1: 0, y1: 0.8, x2: 1, y2: 1, stop: 0 #bbf stop: 1 #55f);
     height: 12px;
 }
 
 QSlider::add-page:horizontal {
-    background-color: rgb(120, 120, 120);
+    background-color: rgb(110, 110, 110);
     border: 1px solid #777;
-    border-radius: 3px;
     width: 12px;
 }
 
 QSlider::add-page:vertical {
-    background: qlineargradient(x1: 0, y: 0.8, x2: 1, y2: 1,
-    stop: 0 #bbf, stop: 1 #55f);
+    background: qlineargradient(x1: 0, y2: 0.8, x2: 1, y2: 1, stop: 0 #bbf, stop: 1 #55f);
     border: 1px solid #777;
-    border-radius: 3px;
     height: 12px;
 }
 
 QSlider::sub-page:vertical {
-    background-color: rgb(120, 120, 120);
-    border: 1px solid #777;
-    border-radius: 3px;
+    background-color: rgb(110, 110, 110);
     width: 12px;
 }
 
@@ -419,9 +411,41 @@ QSlider::handle:vertical {
     margin-right: -8px;
     border-radius: 2px;
 }
+
+#slider_feed_ovr {
+    qproperty-alertOver: 105.0;
+}
+#slider_feed_ovr {
+    qproperty-alertUnder: 60;
+}
+#slider_feed_ovr[alertState='over'] {
+   background: qradialgradient(spread:pad, cx:1.2, cy:0.5, radius:0.63, fx:1, fy:0.5, stop:0.406912 rgba(255, 0, 0, 255), stop:1 rgba(255, 255, 255, 0));
+}
+#slider_feed_ovr[alertState='under'] {
+    background: qradialgradient(spread:pad, cx:-0.15, cy:0.5, radius:0.8, fx:0, fy:0.5, stop:0.326342 rgba(255, 255, 0, 255), stop:1 rgba(255, 255, 255, 0));
+}
+
+
+#slider_spindle_ovr {
+    qproperty-alertOver: 110.0;
+}
+#slider_spindle_ovr {
+    qproperty-alertUnder: 75;
+}
+#slider_spindle_ovr[alertState='over'] {
+    background: qradialgradient(spread:pad, cx:1.25, cy:0.5, radius:0.7, fx:1, fy:0.5, stop:0.406912 rgba(255, 255, 0, 255), stop:1 rgba(255, 255, 255, 0));
+
+}
+#slider_spindle_ovr[alertState='under'] {
+    background: qradialgradient(spread:pad, cx:-0.15, cy:0.5, radius:0.7, fx:0, fy:0.5, stop:0.326342 rgba(255, 0, 0, 255), stop:1 rgba(255, 255, 255, 0));
+
+}
+
+
 QDialog{
 background-image: url(:/images/images/brushed_metal.png);
 }
+
 ToolDialog QPushButton, AboutDialog QPushButton{
     width: 100px;
     height: 40px;
@@ -434,6 +458,35 @@ EntryDialog QPushButton, CloseDialog QPushButton{
 QTabWidget::pane { /* The tab widget frame */
     border-top: 0px solid #C2C7CB;
 }
+
+LcncDialog QPushButton,
+ToolDialog QPushButton,
+AboutDialog QPushButton {
+    width: 80px;
+    height: 40px;
+}
+
+RunFromLineDialog QPushButton,
+CalculatorDialog QPushButton,
+EntryDialog QPushButton,
+CloseDialog QPushButton {
+    font: 12pt "Lato Heavy";
+    width: 80px;
+    height: 40px;
+}
+
+CalculatorDialog QLineEdit {
+    font: 16pt "Lato Heavy";
+}
+
+
+/** Dialogs **/
+QDialog QPushButton {
+  width: 100px;
+  height: 40px;
+}
+
+
 
 /* Style the tab using the tab sub-control. Note that
     it reads QTabBar _not_ QTabWidget */
@@ -477,9 +530,50 @@ OriginOffsetView {
    qproperty-metric_template: '%10.3f'; 
 }
 
+/** Plain Text Edit **/
+QTextEdit,
+QPlainTextEdit,
+QListWidget {
+  background: #eeeeee;
+  font: 12pt "Lato Heavy";
+}
 
 
+#screen_options {
+    qproperty-user1Color: white;     /*  default status     */
+    qproperty-user2Color: #fff466;   /*  warning status     */
+    qproperty-user3Color: #ff7882;   /*  critical status    */
+    qproperty-user4Color: #ffaa00;   /*  MPG select         */
+    qproperty-user5Color: #ff0000;   /*  Cycle Start select */
+}
 
 
+/** GCode Display **/
+EditorBase {
+    qproperty-styleColorBackground: #c0c0c0;
+    qproperty-styleColorMarginBackground: #666666;
+    qproperty-styleColorMarginText: #ffffff;
+    qproperty-styleColorMarkerBackground: #9f9f9f;
+    qproperty-styleColorSelectionBackground: #006aff;
+    qproperty-styleColorSelectionText: #ffffff;
+    qproperty-styleFont: "DejaVu Sans Mono,12,-1,5,50,0,0,0,1,0"; /* default */
+    qproperty-styleFont0: "DejaVu Sans Mono,12,-1,5,50,0,0,0,1,0";
+    qproperty-styleFont1: "DejaVu Sans Mono,12,-1,5,50,1,0,0,1,0";
+    qproperty-styleFont2: "DejaVu Sans Mono,12,-1,5,90,0,0,0,1,0";
+    qproperty-styleFont3: "DejaVu Sans Mono,12,-1,5,90,0,0,0,1,0";
+    qproperty-styleFont4: "DejaVu Sans Mono,12,-1,5,90,0,0,0,1,0";
+    qproperty-styleFont5: "DejaVu Sans Mono,12,-1,5,90,0,0,0,1,0";
+    qproperty-styleFont6: "DejaVu Sans Mono,12,-1,5,70,0,0,0,1,0";
+    qproperty-styleFont7: "DejaVu Sans Mono,12,-1,5,70,0,0,0,1,0";
+    qproperty-styleFontMargin: "DejaVu Sans Mono,10,-1,5,50,0,0,0,1,0";
+    qproperty-styleColor0: #efefef;/* default */
+    qproperty-styleColor1: #444444;/* LineNo & Comments */
+    qproperty-styleColor2: blue;/* Gcodes */
+    qproperty-styleColor3: #006412;/* Mcodes #007615; */
+    qproperty-styleColor4: #ad00ff;/* Axes */
+    qproperty-styleColor5: red;/* Other (feed, spindle, radius, etc) */
+    qproperty-styleColor6: #111155;/* Axes Values */
+    qproperty-styleColor7: #111155;/* Other Values */
+}
 
 
