--- a/share/qtvcp/screens/qtdragon_hd/brushed_metal_color.qss
+++ b/share/qtvcp/screens/qtdragon_hd/brushed_metal_color.qss
@@ -48,29 +48,29 @@ ActionButton#action_machine_on {
     color: #FF0000;
 }
 
-ActionButton#x_plus_jogbutton,
-ActionButton#x_minus_jogbutton {
+ActionButton#plus_jogbutton_0,
+ActionButton#minus_jogbutton_0 {
     border-radius: 4px;
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1, stop:0 rgba(180, 255, 180,160),  stop:0.6 rgba(80, 255, 80, 160));
     
 }
 
-ActionButton#y_plus_jogbutton,
-ActionButton#y_minus_jogbutton {
+ActionButton#plus_jogbutton_1,
+ActionButton#minus_jogbutton_1 {
     border-radius: 4px;
    background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1, stop:0 rgba(255, 180, 180,160),  stop:0.6 rgba(255, 80, 80,160));
     
 }
-ActionButton#z_plus_jogbutton,
-ActionButton#z_minus_jogbutton {
+ActionButton#plus_jogbutton_2,
+ActionButton#minus_jogbutton_2 {
     border-radius: 4px;
   background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1, stop:0 rgba(180, 180, 255,160),  stop:0.6 rgba(80, 80, 255,160));    
 }
 
 
 
-#plus_jogbutton_4,
-#minus_jogbutton_4 {
+#plus_jogbutton_3,
+#minus_jogbutton_3 {
    border-radius: 4px;
    font: 17pt "Lato Heavy";
    background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1, stop:0 rgba(203, 145, 27,250),  stop:0.6 rgba(173, 105, 6, 180));
@@ -78,8 +78,8 @@ ActionButton#z_minus_jogbutton {
 }
 
 
-#plus_jogbutton_5,
-#minus_jogbutton_5 {
+#plus_jogbutton_4,
+#minus_jogbutton_4 {
    border-radius: 4px;
    font: 17pt "Lato Heavy";
    background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1, stop:0 rgba(193, 107, 188,250),  stop:0.6 rgba(150, 100,140, 200));
@@ -111,7 +111,7 @@ QLabel {
 }
 
 QLabel#lbl_jog_angular{
-    font: 18pt "Lato Heavy";
+    font: 10pt "Lato Heavy";
     color: black;
 }
 
@@ -155,7 +155,7 @@ QLabel#label_axis_z {
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
 
-#axis_select_x {
+#axis_select_0 {
     border: 2px solid black;
     border-radius: 4px;
     font: 16pt "Lato Heavy";
@@ -163,7 +163,7 @@ QLabel#label_axis_z {
    background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
 
-#axis_select_y {
+#axis_select_1 {
     border: 2px solid black;
     border-radius: 4px;
     font: 16pt "Lato Heavy";
@@ -171,7 +171,7 @@ QLabel#label_axis_z {
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
 
-#axis_select_z {
+#axis_select_2 {
     border: 2px solid black;
     border-radius: 4px;
     font: 16pt "Lato Heavy";
@@ -179,7 +179,7 @@ QLabel#label_axis_z {
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
 
-#axis_select_4 {
+#axis_select_3 {
     border: 2px solid black;
     border-radius: 4px;
     font: 16pt "Lato Heavy";
@@ -187,7 +187,7 @@ QLabel#label_axis_z {
     background: qlineargradient(spread:reflect, x1:0.5, y:0, x2:0.5, y2:1.6, stop:0 rgba(160, 160, 160, 225),  stop:0.6 rgba(110, 110, 110, 225));
 }
 
-#axis_select_5 {
+#axis_select_4 {
     border: 2px solid black;
     border-radius: 4px;
     font: 16pt "Lato Heavy";
